--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    {% if page.dllink %}<h2 class="post-title p-name"><a href={{ page.dllink }} target="_blank">{{ page.dllink }}</a></h2>{% endif %}
+    {% if page.dllink %}<h3 class="post-title p-name"><a href={{ page.dllink }} target="_blank">{{ page.dlsource }}</a></h3>{% endif %}
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
